# ChatBot_Dev

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  setup.cfg
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  auth.py  chat.py  documents.py  models.py  prompts.py  workspaces.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  conversation.py  document.py  prompt.py  user.py  workspace.py
backend/app/schemas/: admin.py  auth.py  chat.py  document.py  prompt.py  workspace.py
backend/app/services/: ollama.py  rag.py
backend/tests/: test_auth.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/auth/: LoginForm.tsx
frontend/src/components/chat/: ChatArea.tsx  ChatHeader.tsx  ChatInput.tsx  MessageBubble.tsx
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
frontend/src/pages/: AdminPage.tsx  ChatPage.tsx  PromptsPage.tsx  SettingsPage.tsx  WorkspacesPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: authStore.ts  chatStore.ts  index.ts  uiStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: index.ts
