[project]
name = "openchat-ai"
version = "1.0.0"
description = "Production-ready AI chatbot backend with FastAPI and Ollama"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "pydantic[email]==2.10.3",
    "pydantic-settings==2.7.0",
    "python-jose[cryptography]==3.3.0",
    "bcrypt==4.2.1",
    "python-multipart==0.0.20",
    "httpx==0.28.1",
    "langchain==0.3.13",
    "langchain-community==0.3.13",
    "chromadb==0.5.23",
    "pypdf==5.1.0",
    "python-docx==1.1.2",
    "tiktoken==0.8.0",
    "redis==5.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
    "ruff==0.8.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
